--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "engines": {
-    "node": "13.x",
+    "node": "12.6.2",
     "npm": "6.14.4"
   },
   "scripts": {
