--- a/client/package.json
+++ b/client/package.json
@@ -6,17 +6,17 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "axios": "^0.19.2",
-    "http-proxy-middleware": "^1.0.4",
+    "axios": "^0.21.1",
+    "http-proxy-middleware": "^1.0.6",
     "materialize-css": "^1.0.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^3.4.1",
     "react-stripe-checkout": "^2.6.3",
     "redux": "^4.0.5",
-    "redux-form": "^8.3.6",
+    "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
